// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code civil 1`] = `
Object {
  "id": "LEGITEXT000006070721",
  "source": "code civil",
  "value": "Code civil",
}
`;

exports[`code civille 1`] = `undefined`;

exports[`code penal 1`] = `
Object {
  "id": "LEGITEXT000006071029",
  "source": "code penal",
  "value": "CODE PENAL",
}
`;

exports[`code pénal 1`] = `
Object {
  "id": "LEGITEXT000006070719",
  "source": "code pénal",
  "value": "Code pénal",
}
`;

exports[`du code civil et tout 1`] = `
Object {
  "id": "LEGITEXT000006070721",
  "source": "code civil",
  "value": "Code civil",
}
`;

exports[`du code de la route 1`] = `
Object {
  "id": "LEGITEXT000006074947",
  "source": "code de la route",
  "value": "Code de la route",
}
`;

exports[`du code de la rue 1`] = `undefined`;

exports[`du code penal 1`] = `
Object {
  "id": "LEGITEXT000006071029",
  "source": "code penal",
  "value": "CODE PENAL",
}
`;

exports[`du code pennal 1`] = `
Object {
  "id": "LEGITEXT000006071029",
  "source": "code pennal",
  "value": "CODE PENAL",
}
`;

exports[`du code pénal et du code civil et du code de la route 1`] = `
Object {
  "id": "LEGITEXT000006070719",
  "source": "code pénal",
  "value": "Code pénal",
}
`;
